--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <body>
     <h1>Hello, world!</h1>
     <p>This page includes an alert written in JavaScript.</p>
+    <a href="palindrome.html">palindrome tester</a>
+    
   </body>
 </html>
